--- a/material-widgets.css
+++ b/material-widgets.css
@@ -438,6 +438,15 @@ input[type="checkbox"].switch {
 		     -o-transition-property: box-shadow, -o-transform;
 		        transition-property: box-shadow, transform;
 	}
+		input[type="checkbox"].switch:not(:disabled):hover::before,
+		input[type="checkbox"].switch:not(:disabled):focus::before,
+		input[type="checkbox"].switch:not(:disabled):active::before,
+		input[type="checkbox"].switch:not(:disabled).active::before {
+			background-color: currentColor;
+			-webkit-box-shadow: none;
+			   -moz-box-shadow: none;
+			        box-shadow: none;
+		}
 		input[type="checkbox"].switch:not(:disabled):hover::after,
 		input[type="checkbox"].switch:not(:disabled):focus::after {
 			background-color: #f8f8f8;
