--- a/material-elements.css
+++ b/material-elements.css
@@ -224,7 +224,9 @@ input[type="checkbox"] {
 	input[type="radio"]:checked,
 	input[type="checkbox"]:checked {
 		border-color: #40c4ff;
+		border-color: var(--mz-accent-color, #40c4ff);
 		color: #40c4ff;
+		color: var(--mz-accent-color, #40c4ff);
 	}
 	input[type="radio"]::before,
 	input[type="checkbox"]::before {
@@ -371,6 +373,7 @@ input[type="checkbox"] {
 }
 	input[type="checkbox"]:checked {
 		color: #40c4ff;
+		color: var(--mz-accent-color, #40c4ff);
 		-webkit-box-shadow: inset 0 0 0 10px;
 		   -moz-box-shadow: inset 0 0 0 10px;
 		        box-shadow: inset 0 0 0 10px;
@@ -463,6 +466,7 @@ input[type="range"], progress {
 		-webkit-border-radius: 50%;
 		        border-radius: 50%;
 		background-color: #40c4ff;
+		background-color: var(--mz-accent-color, #40c4ff);
 		-webkit-box-shadow: none;
 		        box-shadow: none;
 		
@@ -476,6 +480,7 @@ input[type="range"], progress {
 		-moz-border-radius: 50%;
 		     border-radius: 50%;
 		background-color: #40c4ff;
+		background-color: var(--mz-accent-color, #40c4ff);
 		-moz-box-shadow: none;
 		     box-shadow: none;
 		
@@ -488,6 +493,7 @@ input[type="range"], progress {
 		border: 0 none;
 		border-radius: 50%;
 		background-color: #40c4ff;
+		background-color: var(--mz-accent-color, #40c4ff);
 		box-shadow: none;
 		
 		transition-duration: 0.1s;
@@ -546,12 +552,15 @@ input[type="range"], progress {
 progress::-webkit-progress-bar-value,
 progress::-webkit-progress-value {
 	background-color: #40c4ff;
+	background-color: var(--mz-accent-color, #40c4ff);
 }
 progress::-moz-progress-bar {
 	background-color: #40c4ff;
+	background-color: var(--mz-accent-color, #40c4ff);
 }
 progress::-ms-fill {
 	background-color: #40c4ff;
+	background-color: var(--mz-accent-color, #40c4ff);
 }
 
 /* --------======== TEXT FIELDS ========-------- */
@@ -600,6 +609,7 @@ select[size] > option {
 	textarea:focus,
 	select[size]:focus {
 		border-color: #40c4ff;
+		border-color: var(--mz-accent-color, #40c4ff);
 		outline: 0 none transparent;
 	}
 	input[type="text"]:focus,
