--- a/material-widgets.css
+++ b/material-widgets.css
@@ -515,6 +515,54 @@ input[type="checkbox"].switch {
 			        transition-duration: inherit;
 		}
 
+/* Override animations for reduced motion */
+@media (prefers-reduced-motion: reduce) {
+	body,
+	.appBar,
+	input[type="checkbox"].switch {
+		-webkit-transition-duration: 0s;
+		   -moz-transition-duration: 0s;
+		    -ms-transition-duration: 0s;
+		     -o-transition-duration: 0s;
+		        transition-duration: 0s;
+	}
+	
+	progress.circular,
+	progress.circular::before,
+	progress.circular::after,
+	[role="progressbar"].circular,
+	[role="progressbar"].circular::before,
+	[role="progressbar"].circular::after {
+		-webkit-animation-duration: 0s;
+		   -moz-animation-duration: 0s;
+		    -ms-animation-duration: 0s;
+		     -o-animation-duration: 0s;
+		        animation-duration: 0s;
+		-webkit-animation-name: none;
+		   -moz-animation-name: none;
+		    -ms-animation-name: none;
+		     -o-animation-name: none;
+		        animation-name: none;
+	}
+		progress.circular::before,
+		[role="progressbar"].circular::before {
+			-webkit-transform: rotateZ(89deg);
+			   -moz-transform: rotateZ(89deg);
+			    -ms-transform: rotateZ(89deg);
+			     -o-transform: rotateZ(89deg);
+			        transform: rotateZ(89deg);
+		}
+		progress.circular::after,
+		[role="progressbar"].circular::after {
+			-webkit-transform: rotateZ(178deg);
+			   -moz-transform: rotateZ(178deg);
+			    -ms-transform: rotateZ(178deg);
+			     -o-transform: rotateZ(178deg);
+			        transform: rotateZ(178deg);
+		}
+}
+
+/* Keyframes for circular progress spinners */
 @-webkit-keyframes materialz-circular-progress-part1 {
 	0% {
 		-webkit-transform: rotateZ(0deg);
