--- a/material-widgets.css
+++ b/material-widgets.css
@@ -230,6 +230,19 @@ body {
 	
 	overflow: hidden;
 }
+.card.full-width {
+	margin-left: auto;
+	margin-right: auto;
+}
+@media (max-width: 600px) {
+	.card.full-width {
+		margin-left: -16px;
+		margin-right: -16px;
+		-webkit-border-radius: 0;
+		   -moz-border-radius: 0;
+		        border-radius: 0;
+	}
+}
 
 /* --------======== CIRCULAR PROGRESS INDICATORS ========-------- */
 progress.circular,
