--- a/material-elements.css
+++ b/material-elements.css
@@ -237,6 +237,7 @@ input[type="checkbox"] {
 		right: 0;
 		bottom: 0;
 		
+		-webkit-border-radius: 10px; /* 50% for old Android */
 		-webkit-border-radius: 50%;
 		   -moz-border-radius: 50%;
 		        border-radius: 50%;
@@ -290,6 +291,7 @@ input[type="checkbox"] {
 input[type="radio"] {
 	width: 20px;
 	height: 20px;
+	-webkit-border-radius: 10px; /* 50% for old Android */
 	-webkit-border-radius: 50%;
 	   -moz-border-radius: 50%;
 	        border-radius: 50%;
@@ -303,6 +305,7 @@ input[type="radio"] {
 		right: 0;
 		bottom: 0;
 		
+		-webkit-border-radius: 10px; /* 50% for old Android */
 		-webkit-border-radius: 50%;
 		   -moz-border-radius: 50%;
 		        border-radius: 50%;
@@ -463,6 +466,7 @@ progress {
 
 		width: 12px;
 		height: 12px;
+		-webkit-border-radius: 9px; /* 50% of maximum for old Android */
 		-webkit-border-radius: 50%;
 		        border-radius: 50%;
 		background-color: #40c4ff;
